--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,38 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <svg id="coin" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+       viewBox="0 0 900 800" style="enable-background:new 0 0 1122 1122;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#F4F4F4;}
+</style>
+    <g id="BG">
+</g>
+    <g id="Object">
+	<g>
+		<path class="st0" d="M534.8,536.1c6.6-0.2,13.1-0.1,19.7,0c10.6,0.2,21.2-0.4,31.7-2.2c15.3-2.7,25-11.6,27.2-25.6
+			c2.1-13.5-3.7-26.1-16.9-31.2c-8.2-3.1-16.9-3.6-25.6-3.9c-12.1-0.3-24.2,0-36.3-0.2c-2.7,0-3.5,0.9-3.5,3.5c0.1,9.3,0,18.6,0,28
+			c0,9.3,0.1,18.7-0.1,28C531.1,535.4,532,536.2,534.8,536.1z"/>
+    <path class="st0" d="M588.4,576.8c-5.9-1.1-11.9-1.2-17.9-1.5c-12.5-0.6-24.9-0.1-37.4-0.3c-1.5,0-2.1,0.5-2.1,2.1
+			c0.1,10.5,0,21.1,0,31.6c0,0,0.1,0,0.1,0c0,7.3-0.1,14.6,0,21.9c0.1,4.2-0.3,8.5,0.6,12.7c0.9,4,2.6,5.4,6.6,5.8
+			c9.8,0.8,19.6,0.6,29.3,0.4c8.1-0.2,16.2-0.7,24.1-2.9c25.3-6.9,33.7-36.3,21.5-55.4C607.6,582.3,598.4,578.7,588.4,576.8z"/>
+    <path class="st0" d="M561,243.5c-175.4,0-317.5,142.1-317.5,317.5S385.6,878.5,561,878.5S878.5,736.4,878.5,561
+			S736.4,243.5,561,243.5z M660.7,670.6c-13.6,11.1-29.8,16.4-47,18.6c-2.8,0.4-3.8,1.2-3.8,4.1c0.1,13.8,0,27.5,0,41.3
+			c-12.4,0-24.8,0-37.1,0c-0.1-1.2-0.2-2.4-0.2-3.6c0-11.8-0.1-23.6,0.1-35.5c0-2.9-0.9-3.7-3.6-3.5c-4.7,0.2-9.4,0-14.1,0.1
+			c-5.8,0-5.2-0.6-5.2,5.1c-0.1,12.5-0.1,24.9-0.2,37.4c-12.4,0-24.8,0-37.1,0c0-12.9,0-25.9,0-38.8c0-3.7,0-3.7-3.7-3.7
+			c-23.3,0-46.6,0-69.8,0c-4,0-4,0-4-4c0-9.7,0-19.4,0-29.1c0-3.6,0.2-3.8,3.8-3.8c5.1,0,10.1,0,15.2-0.4
+			c7.2-0.6,10.8-4.2,11.5-11.4c0.4-4.3,0.4-8.7,0.4-13c0-46.5,0-92.9,0-139.4c0-4.1-0.2-8.1-0.5-12.2c-0.4-6.4-4.7-10.6-11.2-11.2
+			c-5.3-0.5-10.7-0.6-16.1-0.5c-2.4,0.1-3.3-0.8-3.3-3.2c0.1-10.2,0.1-20.3,0-30.5c0-2.6,1-3.3,3.5-3.3c23.4,0.1,46.7,0,70.1,0
+			c4,0,4,0,4-4c0-11.7,0.1-23.5,0-35.2c0-2.8,0.9-3.7,3.7-3.6c10.1,0.1,20.1,0.2,30.2,0c2.9,0,3.6,1,3.6,3.7
+			c-0.1,11.9,0,23.8-0.1,35.7c0,2.7,0.9,3.5,3.5,3.4c5.3-0.2,10.5,0,15.8-0.1c3.7,0,3.7,0,3.7-3.6c0-11.5,0-23.1,0-34.6
+			c0-4.5,0-4.5,4.6-4.5c9.5,0,19,0,28.5,0c4.2,0,4.2,0,4.2,4.1c0,12.3,0.1,24.6-0.1,36.9c0,2.8,1,3.7,3.6,4
+			c17.1,2,32.6,7.8,45.6,19.4c6.2,5.6,10.9,12.3,14,20c7.1,17.3,6.2,34.3-2.9,50.7c-6.6,11.8-16.5,20.2-28.5,26.2
+			c-3.5,1.7-7.2,3.1-10.7,5.2c4.4,1.4,8.9,2.8,13.3,4.3c9.8,3.3,18.6,8.3,25.7,15.8c9.1,9.5,14.8,20.8,16.6,34
+			C690,633.8,680.5,654.5,660.7,670.6z"/>
+	</g>
+</g>
+</svg>
+
 </body>
 </html>
